force-app/main/default/objects/QuoteLineItem/fields/RLM_Change__c.field-meta.xml
<CustomField>
    <fullName>RLM_Change__c</fullName>
    <description>Text stamp of Added/Modified/Unchanged vs list price (pricing only). TLE column search needs a text field; picklists are not LIKE-filterable.</description>
    <label>Change</label>
    <length>16</length>
    <type>Text</type>
</CustomField>