force-app/main/default/objects/QuoteLineItem/fields/RLM_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>RLM_Change_Type__c</fullName>
    <description>Stamped from Deal analysis quote compare (list or prior revision). TLE filter uses this column. Removed lines are not on this quote, so they never appear here.</description>
    <label>Change code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Unchanged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>