force-app/main/default/objects/QuoteLineItem/fields/RLM_Line_Margin__c.field-meta.xml
<CustomField>
    <fullName>RLM_Line_Margin__c</fullName>
    <description>Read-only line margin for the TLE. Standard Margin is an Adjustment Type in the RCA line editor, so sellers would otherwise discount via Margin. This formula is display-only.</description>
    <formula>IF(
  ISBLANK(Margin),
  NULL,
  IF(
    AND(Margin &gt; 0, Margin &lt; 1),
    Margin,
    Margin / 100
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>